# hikingplots

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: pytest.yaml
example-tracks/engeratsgundsee/: track.gpx
example-tracks/gauablick/: track.gpx
example-tracks/ramoljoch/: track.gpx
example-tracks/seekofel/: metadata.yaml  track.gpx
example-tracks/toblinger-knoten/: track.gpx
example-tracks/widderstein/: track.gpx
hikingplots/plot/: activity_plot.py  console.py  geolocation.py  main.py  map.py  map_scale.py  plot.py  plot_tools.py  topography.py  track.py
hikingplots/tools/: merge_tif.py
tests/plot/: test_geolocation.py  test_plot_tools.py  test_topography.py  test_track.py
topo-water/: .gitignore
